ci: prepare periodic release mechanism

--- a/package.json
+++ b/package.json
@@ -17,27 +17,33 @@
         "config:generate": "typescript-json-schema ./src/cli/config.ts Config --ignoreErrors --required --excludePrivate -o schemas/config.json && rimraf dist/schemas && cp -r schemas dist/schemas",
         "compile": "tsc",
         "compile:watch": "tsc -w",
-        "build": "tsc && ts-node src/scripts/build.ts && chmod +x ./dist/cli/bin.js",
+        "build": "tsc && ts-node src/scripts/build.ts '0.0.1' && chmod +x ./dist/cli/bin.js",
         "clean": "rimraf dist",
         "clean:incremental": "rimraf dist/tsconfig.tsbuildinfo",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "periodic-release": "ts-node src/generator/periodic-release.ts"
     },
     "dependencies": {
         "cosmiconfig": "^7.0.1",
         "deepmerge": "^4.2.2",
+        "semver": "^7.3.5",
         "tslog": "^3.2.1",
         "typescript-json-schema": "^0.50.1",
         "yaml": "^1.10.2",
         "yargs": "^17.1.1"
     },
     "devDependencies": {
+        "@octokit/rest": "^18.9.1",
         "@types/deepmerge": "^2.2.0",
         "@types/node": "^16.4.1",
         "@types/package-json": "^5.0.1",
+        "@types/semver": "^7.3.8",
+        "@types/shelljs": "^0.8.9",
         "@types/yargs": "^17.0.2",
         "openapi-typescript": "^4.0.2",
         "prettier": "^2.3.2",
         "rimraf": "^3.0.2",
+        "shelljs": "^0.8.4",
         "ts-morph": "^11.0.3",
         "ts-node": "^10.1.0",
         "type-fest": "^1.2.2",
