--- a/.github/workflows/periodic-release.yaml
+++ b/.github/workflows/periodic-release.yaml
@@ -8,10 +8,15 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
+            - run: rm .npmrc
             - uses: actions/setup-node@v2
+              env:
+                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
               with:
                   node-version: "14.x"
                   registry-url: "https://registry.npmjs.org"
+            - run: cat .npmrc
+            - run: cat ~/.npmrc
             - run: "yarn install"
             - run: "yarn run periodic-release"
               env:
