ci: update cron for periodic-release

--- a/.github/workflows/periodic-release.yaml
+++ b/.github/workflows/periodic-release.yaml
@@ -1,7 +1,7 @@
 name: "Periodic release"
 on:
     schedule:
-        - cron: "5 * * * *"
+        - cron: "0 12 * * *"
     workflow_dispatch:
 jobs:
     release:
