--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "license": "MIT",
+    "homepage": "https://kubernate.dev",
     "files": [
         "dist/**.js",
         "dist/**.d.ts"
