--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "license": "MIT",
+    "description": "Generate Kubernetes YAMLs with code instead of templates.",
     "homepage": "https://kubernate.dev",
     "files": [
         "dist/**.js",
