ci: add README to package

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "description": "Generate Kubernetes YAMLs with code instead of templates.",
     "homepage": "https://kubernate.dev",
+    "readme": "README.md",
     "files": [
+        "README.md",
         "dist/**.js",
         "dist/**.d.ts"
     ],
