feat: resources browser api generated code

--- a/schemas/config.json
+++ b/schemas/config.json
@@ -29,6 +29,15 @@
                 "entry": {
                     "type": "string"
                 },
+                "exclude": {
+                    "items": {
+                        "type": "string"
+                    },
+                    "type": "array"
+                },
+                "include": {
+                    "type": "string"
+                },
                 "output": {
                     "$ref": "#/definitions/ConfigOutputs"
                 }
