--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dependencies": {
         "cosmiconfig": "^7.0.1",
         "deepmerge": "^4.2.2",
+        "glob": "^7.1.7",
         "semver": "^7.3.5",
         "tslog": "^3.2.1",
         "typescript-json-schema": "^0.50.1",
