--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
         "tslog": "^3.2.1",
         "typescript-json-schema": "^0.50.1",
         "yaml": "^1.10.2",
-        "yargs": "^17.1.1"
+        "yargs": "^17.1.1",
+        "ts-node": "^10.1.0",
+        "ts-morph": "^11.0.3",
+        "typescript": "^4.3.5"
     },
     "devDependencies": {
         "@octokit/rest": "^18.9.1",
@@ -54,9 +57,6 @@
         "prettier": "^2.3.2",
         "rimraf": "^3.0.2",
         "shelljs": "^0.8.4",
-        "ts-morph": "^11.0.3",
-        "ts-node": "^10.1.0",
-        "type-fest": "^1.2.2",
-        "typescript": "^4.3.5"
+        "type-fest": "^1.2.2"
     }
 }
