--- a/package.json
+++ b/package.json
@@ -36,18 +36,20 @@
         "cosmiconfig": "^7.0.1",
         "deepmerge": "^4.2.2",
         "glob": "^7.1.7",
+        "minimatch": "^3.0.4",
         "semver": "^7.3.5",
+        "ts-morph": "^11.0.3",
+        "ts-node": "^10.1.0",
         "tslog": "^3.2.1",
+        "typescript": "^4.3.5",
         "typescript-json-schema": "^0.50.1",
         "yaml": "^1.10.2",
-        "yargs": "^17.1.1",
-        "ts-node": "^10.1.0",
-        "ts-morph": "^11.0.3",
-        "typescript": "^4.3.5"
+        "yargs": "^17.1.1"
     },
     "devDependencies": {
         "@octokit/rest": "^18.9.1",
         "@types/deepmerge": "^2.2.0",
+        "@types/minimatch": "^3.0.5",
         "@types/node": "^16.4.1",
         "@types/package-json": "^5.0.1",
         "@types/semver": "^7.3.8",
