--- a/schemas/config.json
+++ b/schemas/config.json
@@ -29,6 +29,9 @@
                 "entry": {
                     "type": "string"
                 },
+                "entryTypeName": {
+                    "type": "string"
+                },
                 "exclude": {
                     "items": {
                         "type": "string"
