--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
         "typescript": "^4.3.5",
         "typescript-json-schema": "^0.50.1",
         "yaml": "^1.10.2",
-        "yargs": "^17.1.1"
+        "yargs": "^17.1.1",
+        "openapi-typescript": "^4.0.2",
+        "shelljs": "^0.8.4",
+        "type-fest": "^1.2.2"
     },
     "devDependencies": {
         "@octokit/rest": "^18.9.1",
@@ -58,10 +61,7 @@
         "@types/semver": "^7.3.8",
         "@types/shelljs": "^0.8.9",
         "@types/yargs": "^17.0.2",
-        "openapi-typescript": "^4.0.2",
         "prettier": "^2.3.2",
-        "rimraf": "^3.0.2",
-        "shelljs": "^0.8.4",
-        "type-fest": "^1.2.2"
+        "rimraf": "^3.0.2"
     }
 }
